@@ -15,6 +15,8 @@ software-store (0.2.3) UNRELEASEDkarmic; urgency=low
       for the available software
   * softwarestore/view/searchentry.py:
     - make the icon_theme optional
+  * make the status bar display the current number of items displayed
+  * center the status bar (LP: #424895)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Sep 2009 11:23:58 +0200
 
